# AsimovEyeLib

./: .gitignore  bgdelta  bgsubtract  calibration  charuco_sim  framegrabber  grabframe  hsvvidbg  register  segv  undistort  vidbg  vidbg2
Data/goprocalib/: GOPR0341.LRV  calibrate  lrvcamera.yml  mp4camera.yml
src/UtilityLib/: common.hpp
src/bgdelta/: bgdelta.cpp
src/bgstool/: CMakeLists.txt  bgstool.cpp
src/bgsubtract/: CMakeLists.txt  bgsubtract.cpp  makeit
src/charuco_board/: charuco_board.cpp
src/charuco_sim/: CMakeLists.txt  README  charuco_sim.cpp  design.txt  makeit
src/cvtools/: cpp-example-bgfg_segm  cpp-example-imagelist_creator
src/framegrabber/: CMakeLists.txt  framegrabber.cpp  makeit
src/hregister/: hregister.cpp
src/hsvvidbg/: CMakeLists.txt  hsvvidbg.cpp  makeit
src/register/: CMakeLists.txt  makeit  register.cpp
src/segv/: CMakeLists.txt  makeit  segv.cpp
src/undistort/: CMakeLists.txt  makeit  undistort.cpp
src/vidbg/: CMakeLists.txt  makeit  vidbg.cpp
src/vidbg2/: CMakeLists.txt  makeit  vidbg2.cpp
src/vidclipper/: CMakeLists.txt  vidclipper.cpp
